prevent overflow of key value pair

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
     color: rgb(0, 170, 0); 
   }
   .value-boolean { 
-    color: rgb(0, 170, 0); 
+    color: rgb(0, 86, 235); 
   }
   .list-group-item { 
     padding: 2px 5px; 
